--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@
 }
 
 .page-header {
-    background: url(https://img5.pic.in.th/file/secure-sv1/-135e1cf1cc667f011.png) top center no-repeat;
+    background: url(https://img5.pic.in.th/file/secure-sv1/Screenshot-2025-03-19-160408.png") top center no-repeat;
     background-size: cover;
     text-shadow: 0 0 30px rgba(0, 0, 0, .1);
 }
