--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@
 }
 
 .page-header {
-    background: url("https://img5.pic.in.th/file/secure-sv1/22387b32e7b258440a5.png") top center no-repeat;
+    background: url("https://img5.pic.in.th/file/secure-sv1/5223.jpg");
     background-size: cover;
     text-shadow: 0 0 30px rgba(0, 0, 0, .1);
 }
