--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body{
 .navbar .dropdown-toggle::after {
     border: none;
     content: "\f107";
-    font-family: "Font Awesome 5 Free";
+    font-family: "sarabun";
     font-weight: 900;
     vertical-align: middle;
     margin-left: 8px;
@@ -498,7 +498,7 @@ body{
 .footer .btn.btn-link::before {
     position: relative;
     content: "\f105";
-    font-family: "Font Awesome 5 Free";
+    font-family: "sarabun";
     font-weight: 900;
     margin-right: 10px;
 }
